# sc-mpu9250

./: .gitignore  CMakeLists.txt  Makefile  README.md  project.json
apps/ahrs_debug/: CMakeLists.txt  app.json  main.cpp
apps/calibrate/: CMakeLists.txt  main.cpp
apps/debug/: CMakeLists.txt  app.json  main.cpp
libs/Adafruit_AHRS/: Adafruit_Sensor_Set.h  Adafruit_Simple_AHRS.cpp  Adafruit_Simple_AHRS.h  CMakeLists.txt  README.md  lib.json
libs/Adafruit_LSM9DS0_Library/: Adafruit_LSM9DS0.cpp  Adafruit_LSM9DS0.h  CMakeLists.txt  README.md  lib.json
libs/Adafruit_Sensor/: Adafruit_Sensor.cpp  Adafruit_Sensor.h  CMakeLists.txt  README.md
libs/LinuxDuino/: CMakeLists.txt  LinuxDuino.cpp  LinuxDuino.h
libs/debugging/: CMakeLists.txt  debug.cpp  debug.h
libs/mpu9250/: CMakeLists.txt  MPU9250.cpp  MPU9250.h  README.md  main.cpp  quaternionFilters.cpp  quaternionFilters.h
plugin/: CMakeLists.txt  MPU9250.sc  MPU_UGen.cpp
plugin/HelpSource/Classes/: MPU.schelp
scripts/: load_default_patch  loaddefs.scd  sboot.sc  sctest  start_all.sh
synthdef/: AHRS.sc  AHRS_UGen.cpp  CMakeLists.txt  GPIO.sc  GPIO_UGen.cpp  MPU9250.sc  MPU9250_UGen.cpp  NIME.sc  NIME1.sc  NIME2.sc  NIME3.sc  NIME4.sc
